--- a/client/src/Components/Login/login.css
+++ b/client/src/Components/Login/login.css
@@ -69,6 +69,7 @@
     height: 100%;
     object-fit: cover;
     opacity: 60%;
+    transition: all 0.2s ease-in-out;
 }
 
 @media (max-width: 1200px) {
