--- a/client/src/Components/Home/home.css
+++ b/client/src/Components/Home/home.css
@@ -3,7 +3,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    height: auto;
+    overflow-y: scroll;
 }
 
 .home main {
@@ -12,7 +13,9 @@
     height: 100vh;
     width: 1000px;
     max-width: 90%;
-    background-color: #656565;
+
+    display: flex;
+    flex-direction: column;
 }
 
 .home main .userInfo {
@@ -25,18 +28,21 @@
     height: 300px;
     max-height: 300px;
     width: 100%;
+    flex: 20%;
 }
 
 .home main .backgroundImg {
     width: 100%;
     height: 30%;
     margin-bottom: 3em;
+    border-radius: 5px;
 }
 
 .home main .backgroundImg img {
     width: 100%;
     height: 225px;
     object-fit: cover;
+    border-radius: 5px;
 }
 
 .home main .profile {
@@ -49,7 +55,7 @@
     height: 200px;
     object-fit: cover;
     border-radius: 50%;
-    border: #656565 solid 10px;
+    border: #292929 solid 10px;
 }
 
 .home main .profileInfo {
