--- a/client/src/Components/Modal/modal.css
+++ b/client/src/Components/Modal/modal.css
@@ -5,6 +5,7 @@
     width: 100%;
     background-color: rgb(44, 44, 44);
     color: rgb(223, 223, 223);
+    padding-bottom: 10em;
 }
 
 .modal {
@@ -65,7 +66,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    align-items: center;
+    align-items: flex-start;
 }
 .modal-body form .budget-body .budget-inputs {
     display: flex;
@@ -74,4 +75,9 @@
 }
 .modal-body form .budget-body .budget-inputs input {
     padding: 5em;
+}
+.modal-body form .budget-body .budget-dropdown {
+    display: flex;
+    justify-self: flex-start;
+    width: 100%;
 }
