--- a/client/src/Components/Modal/modal.css
+++ b/client/src/Components/Modal/modal.css
@@ -3,9 +3,15 @@
     padding: 0;
     height: 100%;
     width: 100%;
-    background-color: rgb(44, 44, 44);
+    background: rgb(93, 67, 79);
+    background: linear-gradient(
+        90deg,
+        rgba(93, 67, 79, 1) 0%,
+        rgba(63, 78, 97, 1) 100%
+    );
     color: rgb(223, 223, 223);
     padding-bottom: 10em;
+    font-family: sans-serif;
 }
 
 .modal {
@@ -21,7 +27,7 @@
 }
 .modal-header {
     font-size: 50px;
-    font-family: 'Roboto', sans-serif;
+    font-family: sans-serif;
     padding: 1.2em;
 }
 
@@ -36,11 +42,16 @@
 }
 
 .modal-body form #title {
-    padding: 1em;
+    padding: 1.2em;
     outline: none;
     font-weight: bold;
     margin-bottom: 1em;
     border-radius: 5px;
+    color: white;
+    background-color: rgb(31, 31, 31, 0.9);
+    outline: none;
+    border: none;
+    font-family: sans-serif;
 }
 .modal-body form #description {
     padding: 1em;
@@ -48,36 +59,142 @@
     resize: none;
     border-radius: 5px;
     height: 300px;
+    background-color: rgb(31, 31, 31, 0.9);
+    outline: none;
+    border: none;
+    color: white;
+    font-weight: light;
+    font-family: sans-serif;
 }
 
 .modal-body form .budget {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     flex-direction: column;
     width: 100%;
     justify-content: space-around;
 }
 .modal-body form .budget-header {
     font-size: 20px;
-    font-family: 'Roboto', sans-serif;
-    margin-top: 1em;
+    font-family: sans-serif;
+}
+.modal-body form .budget-header h4 {
+    margin: 0.8em;
 }
 .modal-body form .budget-body {
     display: flex;
     flex-direction: column;
     width: 100%;
     align-items: flex-start;
+    color: white;
 }
-.modal-body form .budget-body .budget-inputs {
-    display: flex;
-
-    flex-direction: column;
+.modal-body form .budget-body .budget_inputs {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: 100%;
+    grid-gap: 0.5em;
+    align-items: flex-start;
+    color: white;
+    align-items: center;
 }
-.modal-body form .budget-body .budget-inputs input {
-    padding: 5em;
+.modal-body form .budget-body .budget_input {
+    padding: 1em;
+    background-color: rgb(31, 31, 31, 0.9);
+    outline: none;
+    border: 1px solid rgb(31, 31, 31);
+    color: white;
+    margin-bottom: 0.5em;
 }
-.modal-body form .budget-body .budget-dropdown {
+.modal-body form .budget-body .budget_Dropdown {
     display: flex;
     justify-self: flex-start;
+    margin-left: 0.8em;
+}
+.modal-body form .budget-body .budget_Dropdown select {
+    background-color: rgb(31, 31, 31, 0.9);
+    color: white;
+    border: 1px solid rgb(31, 31, 31);
+    outline: none;
+    margin-right: 1em;
+}
+.modal-body form .budget-body .budget_Dropdown label {
+    font-size: 15px;
+    margin-right: 1em;
+}
+.modal-body form .budget-body .budget_Dropdown input {
+    background-color: rgb(31, 31, 31, 0.9);
+    color: white;
+    border: 1px solid rgb(31, 31, 31);
+    outline: none;
+}
+
+.modal-body form .location {
+    display: flex;
+    flex-direction: column;
     width: 100%;
+    align-items: flex-start;
+    color: white;
+    margin-bottom: 1.5em;
+}
+.modal-body form .location h5 {
+    margin: 0;
+    margin: 0.8em;
+    font-weight: lighter;
+}
+
+.modal-body form .location h4 {
+    margin: 0;
+    margin-top: 1.5em;
+}
+
+.modal-body form .location input {
+    background-color: rgb(31, 31, 31, 0.9);
+    color: white;
+    border: none;
+    padding: 0.5em;
+}
+
+.modal-body form .upload-images {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: dashed 1px black;
+    padding: 2em;
+}
+
+.modal-body form .upload-images .upload-button {
+    background-color: rgb(25, 53, 85);
+    position: relative;
+    border-radius: 5px;
+}
+.modal-body form .upload-images .upload-button input {
+    display: none;
+}
+.modal-body form .accpeted-files {
+    font-size: 10px;
+}
+.modal-body form .upload-images .upload-button label {
+    display: inline-block;
+    padding: 15px 15px;
+    cursor: pointer;
+}
+
+.modal-body form .upload-images .preview-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 1em;
+}
+
+.modal-body form .upload-images .preview-wrapper .preview-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 1em;
+}
+.modal-body form .upload-images .preview-wrapper .preview-card img {
+    width: 400px;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 5px;
 }
