--- a/client/src/Components/TravelPage/travelpage.css
+++ b/client/src/Components/TravelPage/travelpage.css
@@ -16,3 +16,76 @@
     display: flex;
     flex-direction: column;
 }
+
+.travel-page .image-slider {
+    margin-bottom: 1em;
+    margin-top: 3em;
+    border-radius: 5px;
+    min-height: 500px;
+    position: relative;
+    width: 100%;
+    border: none;
+}
+.travel-page .image-slider #next {
+    height: 100%;
+    width: 100px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    background: rgb(238, 238, 238);
+    background: linear-gradient(
+        90deg,
+        rgba(238, 238, 238, 0) 26%,
+        rgba(0, 0, 0, 0.5) 100%
+    );
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+.travel-page .image-slider #prev {
+    cursor: pointer;
+    width: 100px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    display: flex;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    justify-content: center;
+    align-items: center;
+    background: rgb(0, 0, 0);
+    background: linear-gradient(
+        90deg,
+        rgba(0, 0, 0, 0.5) 0%,
+        rgba(238, 238, 238, 0) 74%
+    );
+}
+.travel-page .image-slider .image {
+    width: 100%;
+    max-height: 500px;
+    object-fit: contain;
+    border-radius: 5px;
+    transition: opacity 2s;
+}
+
+@media (max-width: 580px) {
+    .travel-page .image-slider {
+        min-height: 20vh;
+    }
+}
+@media (max-width: 480px) {
+    .travel-page .image-slider {
+        min-height: 30vh;
+    }
+}
+@media (max-width: 380px) {
+    .travel-page .image-slider .image {
+        min-height: 30vh;
+    }
+}
