--- a/client/src/Components/TravelPage/travelpage.css
+++ b/client/src/Components/TravelPage/travelpage.css
@@ -21,10 +21,12 @@
     margin-bottom: 1em;
     margin-top: 3em;
     border-radius: 5px;
-    min-height: 500px;
+    min-height: 400px;
     position: relative;
     width: 100%;
     border: none;
+    justify-content: center;
+    background-color: rgb(17, 17, 17);
 }
 .travel-page .image-slider #next {
     height: 100%;
@@ -33,6 +35,7 @@
     top: 0;
     bottom: 0;
     right: 0;
+    color: rgba(255, 255, 255, 0.212);
     margin: auto;
     display: flex;
     justify-content: center;
@@ -53,6 +56,7 @@
     position: absolute;
     top: 0;
     bottom: 0;
+    color: rgba(255, 255, 255, 0.212);
     margin: auto;
     display: flex;
     border-top-left-radius: 5px;
@@ -68,15 +72,69 @@
 }
 .travel-page .image-slider .image {
     width: 100%;
-    max-height: 500px;
+    max-height: 400px;
     object-fit: contain;
     border-radius: 5px;
     transition: opacity 2s;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+}
+.travel-page .travelpage-info {
+    margin-bottom: 1em;
+    margin-top: 3em;
+    border-radius: 5px;
+    position: relative;
+    width: 100%;
+    border: none;
+    justify-content: center;
+}
+.travel-page .travelpage-info .travel-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    border-radius: 5px;
+    padding: 0;
+    margin: 0;
+}
+.travel-page .travelpage-info .travel-header #user-info {
+    display: flex;
+    align-items: center;
+
+    width: 100%;
+    border-radius: 5px;
+    padding: 0;
+    margin: 0;
+    margin-top: 1em;
+}
+.travel-page .travelpage-info .travel-header #user-info #username {
+    margin: 0;
+}
+.travel-page .travelpage-info .travel-header #user-info #date {
+    margin: 0;
+}
+.travel-page .travelpage-info .travel-header h2 {
+    margin: 0;
+    color: white;
+    font-size: 3.2em;
+}
+.travel-page .travelpage-info .travel-header h3 {
+    margin: 0;
+    color: rgb(192, 192, 192);
+    font-family: sans-serif;
+    font-weight: lighter;
+    font-size: 1.5em;
+    margin-top: 1em;
 }
 
 @media (max-width: 580px) {
     .travel-page .image-slider {
-        min-height: 20vh;
+        min-height: 30vh;
+    }
+    .travel-page .image-slider .image {
+        max-height: 30vh;
     }
 }
 @media (max-width: 480px) {
