--- a/client/src/Components/TravelPage/travelpage.css
+++ b/client/src/Components/TravelPage/travelpage.css
@@ -105,8 +105,8 @@
 
 .travel-page .image-slider .viewfull-image {
     cursor: pointer;
-    width: 50%;
-    height: 50%;
+    width: 25%;
+    height: 25%;
     outline: none;
     position: absolute;
     border: none;
@@ -120,7 +120,7 @@
     display: flex;
 
     background-color: #29292959;
-
+    border: solid 2px white;
     justify-content: center;
     align-items: center;
     opacity: 0;
@@ -167,7 +167,7 @@
     border-radius: 5px;
     padding: 0;
     margin: 0;
-    margin-top: 1em;
+    margin-top: 2em;
 }
 .travel-page .travelpage-info .travel-header #user-info #username {
     margin: 0;
