--- a/client/src/Components/TravelPage/travelpage.css
+++ b/client/src/Components/TravelPage/travelpage.css
@@ -192,8 +192,13 @@
     margin: 0;
     color: rgb(192, 192, 192);
     font-family: sans-serif;
-    font-weight: lighter;
+    font-weight: 500;
     font-size: 1.5em;
+    padding-bottom: 2px;
+}
+.travel-page .travelpage-info .travel-header #username:hover {
+    padding: 0;
+    border-bottom: solid 2px white;
 }
 .travel-page .post-description {
     display: flex;
