--- a/client/src/Components/Home/home.css
+++ b/client/src/Components/Home/home.css
@@ -69,7 +69,31 @@
     justify-content: space-between;
 }
 
+.home main .profileInfo .profileTexts {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    width: 100%;
+    height: 100%;
+    flex: 80%;
+}
+
 .home main .profileInfo .profileButtons {
+    display: flex;
+    align-items: center;
+    flex: 20%;
+    width: 100%;
+    justify-content: space-around;
+}
+.home main .profileInfo .profileButtons svg {
+    border: solid 1px;
+    border-radius: 50%;
+    padding: 0.2em;
+    cursor: pointer;
+}
+.home main .profileInfo .profileButtons svg:hover {
+    background-color: rgb(32, 32, 32);
 }
 .home main .profileInfo h3 {
     font-size: 2em;
@@ -133,8 +157,8 @@
         height: 200px;
     }
     .home main .profileImg img {
-        width: 150px;
-        height: 150px;
+        width: 120px;
+        height: 120px;
     }
     .home main .profileInfo h3 {
         font-size: 1.5em;
@@ -174,6 +198,25 @@
     }
 }
 
+@media (max-width: 580px) {
+    .home main .profile {
+        flex-direction: column;
+        align-items: center;
+    }
+    .home main .profile .profileInfo {
+        margin: 0;
+        margin-bottom: 3em;
+    }
+    .home main .profile .profileInfo .profileButtons {
+        margin: 0;
+        justify-content: flex-end;
+        align-items: flex-start;
+    }
+    .home main .profile .profileInfo .profileButtons svg {
+        margin-left: 0.5em;
+    }
+}
+
 @media (max-width: 480px) {
     .home main {
         max-width: 100%;
@@ -183,8 +226,8 @@
         height: 200px;
     }
     .home main .profileImg img {
-        width: 125px;
-        height: 125px;
+        width: 100px;
+        height: 100px;
     }
     .home main .profileInfo h3 {
         font-size: 1.25em;
