--- a/client/src/Components/Home/navbar.css
+++ b/client/src/Components/Home/navbar.css
@@ -2,7 +2,8 @@
     position: fixed;
     bottom: 0px;
     width: 100%;
-    background-color: #4b4b4b;
+    background-color: #303030;
+    color: white;
     display: flex;
     justify-content: center;
     height: 7vh;
