--- a/client/src/Components/Feed/PublicFeed.css
+++ b/client/src/Components/Feed/PublicFeed.css
@@ -25,11 +25,14 @@
     justify-content: space-between;
     padding: 0;
     margin: 0;
-    height: 10em;
-    width: 100%;
+    height: 5em;
+    min-width: 100%;
+    align-self: center;
+    z-index: 10;
+    position: absolute;
     background-color: #303030;
-    border-bottom-left-radius: 50px;
-    border-bottom-right-radius: 50px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
     box-shadow: 2px 10px 65px 0px rgba(28, 28, 28, 0.75);
     -webkit-box-shadow: 2px 10px 65px 0px rgba(28, 28, 28, 0.75);
     -moz-box-shadow: 2px 10px 65px 0px rgba(28, 28, 28, 0.75);
@@ -48,12 +51,86 @@
     margin-right: 2em;
     border-radius: 50%;
     cursor: pointer;
-    border: solid transparent 10px;
+    border: solid transparent 5px;
     transition: all 0.3s ease-in-out;
-    outline: 1px solid rgba(190, 190, 190, 0.281);
 }
 .public-feed main .feed-header img:hover {
-    border: solid rgb(78, 78, 78) 10px;
+    border: solid rgb(78, 78, 78) 5px;
+}
+
+.public-feed main .feed-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 6em;
+}
+
+.public-feed .feed-content .feed-card {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+    color: white;
+    border: solid rgba(255, 255, 255, 0.548) 0.5px;
+    border-radius: 10px;
+    z-index: 10;
+    margin-bottom: 3em;
+}
+.public-feed .feed-content .feed-description {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+    margin-bottom: 1em;
+    margin-top: 1em;
+}
+.public-feed .feed-content .feed-description .feed-description-header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.feed-description-header .feed-description-header-user {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+
+    padding-left: 1em;
+    flex: 80%;
+}
+.feed-description-header .feed-description-header-user img {
+    border-radius: 50%;
+    cursor: pointer;
+}
+.feed-description-header .feed-description-header-text {
+    margin-left: 10px;
+    color: white;
+    font-family: sans-serif;
+}
+.feed-description-header .feed-description-header-text h3 {
+    color: white;
+    margin: 0;
+    cursor: pointer;
+    font-family: 'Nunito', sans-serif;
+    font-family: 'Poppins', sans-serif;
+}
+.feed-description-header .feed-description-header-text h5 {
+    color: rgba(255, 255, 255, 0.507);
+    margin: 0;
+    font-weight: lighter;
+}
+.feed-description-header-buttons {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%;
+    background-color: #242424;
+    padding-right: 1em;
+    flex: 20%;
 }
 
 @media screen and (max-width: 900px) {
@@ -70,7 +147,4 @@
     }
 }
 @media screen and (max-width: 450px) {
-    .public-feed main .feed-header {
-        height: 8em;
-    }
 }
