--- a/client/src/Components/Feed/PublicFeed.css
+++ b/client/src/Components/Feed/PublicFeed.css
@@ -63,6 +63,8 @@
     flex-direction: column;
     align-items: center;
     margin-top: 6em;
+    height: 100vh;
+    overflow-y: scroll;
 }
 
 .public-feed .feed-content .feed-card {
