--- a/client/src/Components/Feed/PublicFeed.css
+++ b/client/src/Components/Feed/PublicFeed.css
@@ -77,6 +77,35 @@
     border-radius: 10px;
     margin-bottom: 3em;
 }
+
+.public-feed .feed-content .feed-card .card-header {
+    width: 100%;
+    height: 100%;
+}
+.public-feed .feed-content .feed-card .card-header .carousel {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    background-color: #353535;
+}
+.public-feed .feed-content .feed-card .card-header .carousel .next {
+    position: absolute;
+    top: 50%;
+    right: 0;
+    margin-right: 1em;
+}
+.public-feed .feed-content .feed-card .card-header .carousel .prev {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    margin-left: 1em;
+}
+.public-feed .feed-content .feed-card .card-header .carousel img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
 .public-feed .feed-content .feed-description {
     display: flex;
     flex-direction: column;
