--- a/client/src/Components/Feed/PublicFeed.css
+++ b/client/src/Components/Feed/PublicFeed.css
@@ -62,7 +62,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 6em;
+    margin-top: 5em;
     height: 100vh;
     overflow-y: scroll;
 }
@@ -73,7 +73,7 @@
     align-items: flex-start;
     width: 100%;
     color: white;
-    border: solid rgba(255, 255, 255, 0.548) 0.5px;
+    border: solid rgba(82, 82, 82, 0.548) 0.5px;
     border-radius: 10px;
     margin-bottom: 3em;
 }
@@ -84,21 +84,26 @@
 }
 .public-feed .feed-content .feed-card .card-header .carousel {
     width: 100%;
-    height: 100%;
+    height: 500px;
     position: relative;
     background-color: #353535;
+    border-radius: 10px;
 }
 .public-feed .feed-content .feed-card .card-header .carousel .next {
     position: absolute;
     top: 50%;
     right: 0;
     margin-right: 1em;
+    z-index: 3;
+    opacity: 0.5;
 }
 .public-feed .feed-content .feed-card .card-header .carousel .prev {
     position: absolute;
     top: 50%;
     left: 0;
     margin-left: 1em;
+    z-index: 3;
+    opacity: 0.5;
 }
 .public-feed .feed-content .feed-card .card-header .carousel img {
     width: 100%;
@@ -151,6 +156,7 @@
     color: rgba(255, 255, 255, 0.507);
     margin: 0;
     font-weight: lighter;
+    cursor: pointer;
 }
 .feed-description-header-buttons {
     display: flex;
@@ -161,6 +167,29 @@
     background-color: #242424;
     padding-right: 1em;
     flex: 20%;
+}
+
+.feed-card-overlay {
+    position: absolute;
+    top: 0;
+    background-color: #111111cb;
+    width: 100%;
+    height: 100%;
+    font-size: 64px;
+    font-family: 'Exo 2', sans-serif;
+    font-weight: bolder;
+    transition: all 0.3s ease-in-out;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+}
+.feed-card-overlay p {
+    margin: 0;
+    margin-right: 15px;
+    margin-bottom: 15px;
+}
+.feed-card-overlay:hover {
+    opacity: 0;
 }
 
 @media screen and (max-width: 900px) {
