--- a/client/src/Components/Feed/PublicFeed.css
+++ b/client/src/Components/Feed/PublicFeed.css
@@ -172,21 +172,24 @@
 .feed-card-overlay {
     position: absolute;
     top: 0;
-    background-color: #111111cb;
+    background-color: #111111e1;
     width: 100%;
     height: 100%;
-    font-size: 64px;
-    font-family: 'Exo 2', sans-serif;
-    font-weight: bolder;
+
     transition: all 0.3s ease-in-out;
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
 }
 .feed-card-overlay p {
+    font-size: 8ch;
+    font-weight: bolder;
     margin: 0;
     margin-right: 15px;
     margin-bottom: 15px;
+    color: rgba(255, 255, 255, 0.74);
+    font-family: 'Open Sans', sans-serif;
+    transition: all 0.3s ease-in-out;
 }
 .feed-card-overlay:hover {
     opacity: 0;
@@ -196,6 +199,9 @@
     .public-feed main {
         max-width: 100%;
     }
+    .feed-card-overlay p {
+        font-size: 6ch;
+    }
 }
 @media screen and (max-width: 600px) {
     .public-feed main .feed-header h1 {
@@ -204,6 +210,18 @@
     .public-feed main .feed-header img {
         margin-right: 1em;
     }
+    .feed-card-overlay p {
+        font-size: 5ch;
+    }
+}
+@media screen and (max-width: 520px) {
+    .feed-card-overlay p {
+        font-size: 4ch;
+        margin-bottom: 20px;
+    }
 }
 @media screen and (max-width: 450px) {
+    .feed-card-overlay p {
+        font-size: 3ch;
+    }
 }
