--- a/client/src/Components/Feed/PublicFeed.css
+++ b/client/src/Components/Feed/PublicFeed.css
@@ -44,6 +44,7 @@
     font-family: 'Nunito', sans-serif;
     font-family: 'Poppins', sans-serif;
     font-weight: bold;
+    cursor: pointer;
 }
 .public-feed main .feed-header img {
     width: 50px;
@@ -62,7 +63,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 5em;
+    padding-top: 6em;
     height: 100vh;
     overflow-y: scroll;
 }
