--- a/client/src/Components/TravelPage/travelpage.css
+++ b/client/src/Components/TravelPage/travelpage.css
@@ -19,7 +19,7 @@
 
 .travel-page .image-slider {
     margin-bottom: 1em;
-    margin-top: 3em;
+    margin-top: 6em;
     border-radius: 5px;
     min-height: 400px;
     position: relative;
@@ -61,6 +61,46 @@
     border-bottom-left-radius: 5px;
     justify-content: center;
     align-items: center;
+}
+.feed-header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0;
+    margin: 0;
+    height: 5em;
+    min-width: 100%;
+    align-self: center;
+    z-index: 10;
+    position: absolute;
+    background-color: #303030;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    box-shadow: 2px 10px 65px 0px rgba(28, 28, 28, 0.75);
+    -webkit-box-shadow: 2px 10px 65px 0px rgba(28, 28, 28, 0.75);
+    -moz-box-shadow: 2px 10px 65px 0px rgba(28, 28, 28, 0.75);
+}
+.feed-header h1 {
+    color: white;
+    margin-left: 2em;
+    transition: all 0.3s ease-in-out;
+    font-family: 'Nunito', sans-serif;
+    font-family: 'Poppins', sans-serif;
+    font-weight: bold;
+    cursor: pointer;
+}
+.feed-header img {
+    width: 50px;
+    height: 50px;
+    margin-right: 2em;
+    border-radius: 50%;
+    cursor: pointer;
+    border: solid transparent 5px;
+    transition: all 0.3s ease-in-out;
+}
+.feed-header img:hover {
+    border: solid rgb(78, 78, 78) 5px;
 }
 
 .travel-page .image-modal {
