--- a/client/src/Components/Home/home.css
+++ b/client/src/Components/Home/home.css
@@ -29,13 +29,41 @@
     max-height: 300px;
     width: 100%;
     flex: 20%;
+    position: relative;
 }
 
 .home main .backgroundImg {
     width: 100%;
-    height: 30%;
-    margin-bottom: 3em;
+    top: 0%;
+    height: 225px;
+    padding-bottom: 3em;
     border-radius: 5px;
+    position: absolute;
+}
+.home main .backgroundImg .edit-bg-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 225px;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.home main .backgroundImg label {
+    height: 50%;
+    width: 50%;
+    background-color: rgba(0, 0, 0, 0.164);
+    text-align: center;
+    display: inline-block;
+    line-height: 100px;
+    color: white;
+    border: dashed 1px white;
+}
+.home main .backgroundImg input {
+    display: none;
 }
 
 .home main .backgroundImg img {
@@ -49,6 +77,8 @@
     width: 95%;
     height: 100%;
     display: flex;
+    position: relative;
+    top: 65%;
 }
 .home main .profileImg img {
     width: 200px;
@@ -156,6 +186,9 @@
         width: 100%;
         height: 200px;
     }
+    .home main .backgroundImg .edit-bg-container {
+        height: 200px;
+    }
     .home main .profileImg img {
         width: 120px;
         height: 120px;
@@ -175,6 +208,9 @@
         font-family: sans-serif;
         font-weight: lighter;
         width: 90%;
+    }
+    .home main .profile {
+        top: 75%;
     }
     .home main .profileInfo #edit-bio {
         background-color: inherit;
@@ -202,6 +238,7 @@
     .home main .profile {
         flex-direction: column;
         align-items: center;
+        top: 55%;
     }
     .home main .profile .profileInfo {
         margin: 0;
