--- a/client/src/Components/Home/travel.css
+++ b/client/src/Components/Home/travel.css
@@ -7,6 +7,7 @@
     width: 100%;
     flex: 60%;
     padding-bottom: 5vh;
+    margin-top: 8em;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
