--- a/client/src/Components/Feed/PublicFeed.css
+++ b/client/src/Components/Feed/PublicFeed.css
@@ -54,6 +54,7 @@
     cursor: pointer;
     border: solid transparent 5px;
     transition: all 0.3s ease-in-out;
+    object-fit: cover;
 }
 .public-feed main .feed-header img:hover {
     border: solid rgb(78, 78, 78) 5px;
@@ -140,6 +141,9 @@
 .feed-description-header .feed-description-header-user img {
     border-radius: 50%;
     cursor: pointer;
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
 }
 .feed-description-header .feed-description-header-text {
     margin-left: 10px;
