--- a/client/src/Components/TravelPage/travelpage.css
+++ b/client/src/Components/TravelPage/travelpage.css
@@ -352,6 +352,147 @@
     background-color: transparent;
     border-bottom: 1px solid white;
 }
+
+.comment-container {
+    color: #dddddd;
+    background-color: rgb(51, 51, 51);
+    width: 100%;
+    font-family: sans-serif;
+    font-weight: lighter;
+    padding-bottom: 1em;
+    border-radius: 10px;
+}
+.comments-header {
+    width: 100%;
+    border-radius: 10px;
+    padding: 0;
+    border: none;
+    margin: 0;
+    color: white;
+    text-align: center;
+    padding: 1em;
+    font-weight: lighter;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS',
+        sans-serif;
+}
+
+.comment-form {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+.comment-form .comment-profile-img {
+    flex: 5%;
+    display: flex;
+    justify-content: center;
+    margin-right: 0.5em;
+    margin-left: 0.5em;
+}
+.comment-form input {
+    flex: 75%;
+    border-radius: 10px;
+    border: solid 1px rgb(8, 8, 8);
+    margin-right: 0.5em;
+    padding-left: 10px;
+    padding-right: 10px;
+    outline: black;
+    transition: all 0.3s ease-in-out;
+    background-color: #292929;
+    color: #dddddd;
+}
+.comment-form button {
+    flex: 20%;
+    border-radius: 10px;
+    border: solid 1px gray;
+    background-color: rgb(143, 238, 217);
+    margin-right: 0.5em;
+    cursor: pointer;
+    transition: all 0.1s ease-in-out;
+    color: rgb(36, 36, 36);
+}
+.comment-form button:hover {
+    flex: 20%;
+    border-radius: 10px;
+    border: solid 1px gray;
+    background-color: rgb(168, 210, 226);
+    margin-right: 0.5em;
+    cursor: pointer;
+}
+
+.comment-list {
+    margin-top: 2em;
+    width: 100%;
+}
+
+.comment-list ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.comment-list .comment-single {
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 0.5em;
+    width: 100%;
+}
+
+.comment-single-wrapper {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    background-color: #3a3a3a;
+    border-radius: 10px;
+    width: 95%;
+}
+.comment-single-wrapper img {
+    border-radius: 10px;
+    min-width: 50px;
+    transition: all 0.3s ease-in-out;
+    color: #dddddd;
+    object-fit: cover;
+    margin-right: 0.5em;
+    margin-left: 0.5em;
+    word-break: break-all;
+}
+
+.comment-single-texts {
+    height: auto;
+    display: flex;
+    align-items: center;
+}
+.comment-single-top h4 {
+    margin: 0;
+}
+.comment-single-top p {
+    margin: 0;
+    font-size: 0.8em;
+    margin-bottom: 1em;
+}
+.comment-single-top {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+.comment-single-top-texts {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+    padding-top: 1em;
+    margin-bottom: 0.5em;
+}
+.comment-single-top-texts h5 {
+    margin: 0;
+    margin-left: 0.5em;
+    font-size: 11px;
+    font-weight: lighter;
+    color: silver;
+}
+
 @media (max-width: 840px) {
     .travel-page .travelpage-info .travel-header .travel-title #edit-title {
         font-size: 2.5em;
