--- a/client/src/Components/TravelPage/travelpage.css
+++ b/client/src/Components/TravelPage/travelpage.css
@@ -370,7 +370,8 @@
     margin: 0;
     color: white;
     text-align: center;
-    padding: 1em;
+    padding-top: 1em;
+    padding-bottom: 1em;
     font-weight: lighter;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS',
         sans-serif;
@@ -435,7 +436,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 0.5em;
+    margin-bottom: 1em;
     width: 100%;
 }
 
@@ -462,6 +463,7 @@
     height: auto;
     display: flex;
     align-items: center;
+    width: 100%;
 }
 .comment-single-top h4 {
     margin: 0;
@@ -470,21 +472,32 @@
     margin: 0;
     font-size: 0.8em;
     margin-bottom: 1em;
+    text-align: start;
 }
 .comment-single-top {
     display: flex;
     flex-direction: column;
-    align-items: center;
+
     width: 100%;
 }
 .comment-single-top-texts {
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: space-between;
     width: 100%;
     padding-top: 1em;
     margin-bottom: 0.5em;
 }
+.comment-details {
+    display: flex;
+    align-items: center;
+    width: 100%;
+}
+.more-btn {
+    margin-right: 1em;
+}
+
 .comment-single-top-texts h5 {
     margin: 0;
     margin-left: 0.5em;
@@ -492,6 +505,52 @@
     font-weight: lighter;
     color: silver;
 }
+
+.dropbtn {
+    color: white;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    color: white;
+    background-color: #555555;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    border-radius: 10px;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {
+    background-color: #444444;
+    border-radius: 10px;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
 
 @media (max-width: 840px) {
     .travel-page .travelpage-info .travel-header .travel-title #edit-title {
