--- a/client/src/Components/Message/message.css
+++ b/client/src/Components/Message/message.css
@@ -77,6 +77,7 @@ p {
 .chatroom-details {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     padding: 0.5rem;
     padding-bottom: 1rem;
     padding-top: 1rem;
@@ -84,7 +85,8 @@ p {
     margin-top: 1em;
     border-bottom: 1px solid #535353;
     outline: 0;
-    border-radius: 10px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
     flex: 10%;
     color: white;
 }
@@ -93,8 +95,15 @@ p {
     width: 60px;
     height: 60px;
     border-radius: 50%;
-    margin-right: 1em;
+    margin-left: 1em;
+    margin-right: 1.5em;
     object-fit: cover;
+}
+
+.chatroom-details-texts {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .chatroom-messages {
@@ -103,12 +112,26 @@ p {
     padding: 0.5rem;
     padding-top: 1rem;
     outline: 0;
-
+    color: white;
     flex: 75%;
     max-height: 80vh;
     overflow: scroll;
     background-color: rgb(44, 44, 44);
 }
+
+.chatroom-messages .message-block {
+    background-color: rgb(65, 65, 65);
+    width: fit-content;
+    padding: 1em;
+    margin-bottom: 1em;
+    border-radius: 50px;
+}
+
+.chatroom-messages #self {
+    align-self: flex-end;
+    background-color: rgb(57, 61, 75);
+}
+
 .chatroom-input {
     display: flex;
     flex-direction: row;
