--- a/client/src/Components/Message/message.css
+++ b/client/src/Components/Message/message.css
@@ -125,6 +125,7 @@ p {
     padding: 1em;
     margin-bottom: 1em;
     border-radius: 50px;
+    max-width: 70%;
 }
 
 .chatroom-messages #self {
@@ -136,8 +137,40 @@ p {
     display: flex;
     flex-direction: row;
     align-items: center;
-    padding: 0.5rem;
-    padding-top: 1rem;
     outline: 0;
     flex: 15%;
+    width: 100%;
+    justify-content: center;
+}
+
+.chatroom-input input {
+    width: 100%;
+    border: 1px solid #888888;
+    border-radius: 10px;
+    padding: 1rem;
+    outline: 0;
+    background-color: #535353;
+    color: white;
+    flex: 80%;
+}
+
+.chatroom-input button {
+    background-color: #2b2f30;
+    border: 1px solid #8d8d8d;
+    border-radius: 10px;
+    padding: 1rem;
+    outline: 0;
+    color: white;
+    flex: 15%;
+    margin-left: 5px;
+}
+.chatroom-input button:hover {
+    background-color: #535353;
+    border: 1px solid #8d8d8d;
+    border-radius: 10px;
+    padding: 1rem;
+    outline: 0;
+    color: white;
+    flex: 15%;
+    margin-left: 5px;
 }
