--- a/client/src/Components/TravelPage/travelpage.css
+++ b/client/src/Components/TravelPage/travelpage.css
@@ -362,6 +362,7 @@
     font-weight: lighter;
     padding-bottom: 1em;
     border-radius: 10px;
+    margin-top: 1em;
 }
 .comments-header {
     width: 100%;
