--- a/client/src/Components/Message/message.css
+++ b/client/src/Components/Message/message.css
@@ -174,3 +174,18 @@ p {
     flex: 15%;
     margin-left: 5px;
 }
+
+.load-more-messages {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding: 0.5rem;
+    border: 1px solid #292929;
+    outline: 0;
+    border-radius: 10px;
+    font-size: 1em;
+    color: rgb(189, 189, 189);
+    margin-bottom: 1em;
+    background-color: transparent;
+}
